--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+.app_wrapper {
+	display: grid;
+	grid-template-columns: 30% 70%;
+}
+.app_wrapper--profile,
+.app_wrapper--projects {
+	padding-left: 1rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@media (max-width: 990px) {
+	.app_wrapper {
+		display: grid;
+		grid-template-columns: 1fr;
+		grid-template-rows: auto;
+	}
+	.app_wrapper--profile {
+		display: none;
+	}
 }
