--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,19 @@
 	display: grid;
 	grid-template-columns: 1fr;
 }
+
+.comment-item {
+  transition: opacity 0.3s ease-in-out;
+}
+
+.comment-item.deleting {
+  opacity: 0;
+  height: 0;
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
 @media (min-width: 767px) {
 	.project-container {
 		column-gap: 15px;
